uat/srv-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  # revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
        tier: backend
    spec:
      restartPolicy: Always
      containers:
      - name: server-app
        image: mimani/sample-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 250m
            memory: 400Mi
          requests:
            cpu: 100m
            memory: 150Mi

        # https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/
