uat/srv-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-url
  annotations:
    kubernetes.io/ingress.class: traefik
    # traefik.ingress.kubernetes.io/router.middlewares: <ns>-<middleware>@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: app-nft-stage-global-rewrite@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: server-srv
            port:
              name: http
  - http:
      paths:
      - path: /api/v2
        pathType: Prefix
        backend:
          service:
            name: server-srv
            port:
              name: http
